--- a/appnotify.json
+++ b/appnotify.json
@@ -1,21 +1,5 @@
 {
-    "typedefs": [
-        {
-            "name": "ULONG",
-            "data_type": "TypeDecl",
-            "type": "unsigned long"
-        },
-        {
-            "name": "LONG",
-            "data_type": "TypeDecl",
-            "type": "long"
-        },
-        {
-            "name": "HRESULT",
-            "data_type": "TypeDecl",
-            "type": "unsigned long"
-        }
-    ],
+    "typedefs": [],
     "structs": [],
     "funcdefs": []
 }
